--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ x-airflow-common:
     - ./pipelines:/opt/airflow/pipelines
     - ./plugins:/opt/airflow/pluginsf
     - ./tests:/opt/airflow/tests
-    - ./utils:/opt/airflow/utils
+    - ./util:/opt/airflow/util
    # - ./airflow.cfg:/opt/airflow/airflow.cfg
     - ./requirements.txt:/opt/airflow/requirements.txt
   depends_on:
@@ -51,11 +51,17 @@ services:
     command: webserver
     ports:
       - "8080:8080"
+    depends_on:
+      - airflow-init
 
   airflow-scheduler:
     <<: *airflow-common
     command: scheduler
+    depends_on:
+      - airflow-init
 
   airflow-worker:
     <<: *airflow-common
     command: celery worker 
+    depends_on:
+      - airflow-init
